css/ux-ui-portfolio-999cb1.webflow.css
/* ... */
.nav-link {
  font-family: Philosopher, sans-serif;
  color: #333;
  font-size: 20px;
  text-transform: lowercase;
}

.nav-link.w--current {
  color: #eb9a9a;
  font-weight: 700;
}

.grid {
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  justify-items: center;
  grid-row-gap: 50px;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  -ms-grid-rows: auto auto;
  grid-template-rows: auto auto;
}

.thumbnail {
  width: 100%;
  min-height: 0px;
  min-width: 0px;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}

.thumbnail:hover {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

.gallery-scroll {
  position: relative;
  padding: 80px 30px;
  border-bottom: 1px solid #e4ebf3;
  background-color: #f5f7fa;
}

.container {
  width: 100%;
  max-width: 940px;
  margin-right: auto;
  margin-left: auto;
}

.gallery-wrapper {
  display: -ms-grid;
  display: grid;
  -webkit-box-align: start;
  -webkit-align-items: start;
  -ms-flex-align: start;
  align-items: start;
  grid-auto-columns: 1fr;
  grid-column-gap: 40px;
  grid-row-gap: 40px;
  -ms-grid-columns: 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  -ms-grid-rows: auto;
  grid-template-rows: auto;
}

.gallery-sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 80px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
}

.gallery-link {
  margin-bottom: 35px;
  color: #1a1b1f;
  font-size: 24px;
  line-height: 32px;
  text-decoration: none;
}

.gallery-link:hover {
  color: rgba(26, 27, 31, 0.8);
}

.gallery-link.w--current {
  font-weight: 600;
}

.gallery-grid {
  display: -ms-grid;
  display: grid;
  grid-auto-columns: 1fr;
  grid-row-gap: 40px;
  -ms-grid-columns: 1fr;
  grid-template-columns: 1fr;
  -ms-grid-rows: auto auto;
  grid-template-rows: auto auto;
}

.gallery-image-wrapper {
  position: relative;
}

.gallery-image {
  width: 100%;
}

.gallery-image-text {
  position: absolute;
  left: 16px;
  right: 16px;
  bottom: 16px;
  margin-bottom: 0px;
  color: #f5f7fa;
}

.footer-dark {
  position: relative;
  padding: 50px 30px 15px;
  border-bottom: 1px solid #e4ebf3;
  background-color: #f5f7fa;
}

.footer-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 900px;
  margin-right: auto;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
}

.footer-content {
  display: -ms-grid;
  display: grid;
  grid-auto-columns: 1fr;
  grid-column-gap: 70px;
  grid-row-gap: 40px;
  -ms-grid-columns: auto auto 1fr;
  grid-template-columns: auto auto 1fr;
  -ms-grid-rows: auto;
  grid-template-rows: auto;
}

.footer-block {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
}

.title-small {
  margin-bottom: 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 700;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.footer-link {
  margin-top: 12px;
  margin-bottom: 6px;
  color: #1a1b1f;
  font-size: 14px;
  line-height: 16px;
  text-decoration: none;
}

.footer-link:hover {
  color: rgba(26, 27, 31, 0.75);
}

.footer-social-block {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 12px;
  margin-left: -12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.footer-social-link {
  margin-left: 12px;
}

.footer-divider {
  width: 100%;
  height: 1px;
  margin-top: 70px;
  margin-bottom: 15px;
  background-color: #e4ebf3;
}

.footer-copyright-center {
  font-size: 14px;
  line-height: 16px;
  text-align: center;
}

.section {
  margin-bottom: 0px;
}

.image {
  width: 5vh;
  padding-top: 10px;
}

.image-2 {
  min-height: 0px;
  min-width: 0px;
  padding-top: 0px;
}

.paragraph-2 {
  font-size: 16px;
  font-weight: 400;
}

.image-3 {
  min-height: 0px;
  min-width: 0px;
  margin-top: 40px;
}

.heading-2 {
  font-family: Philosopher, sans-serif;
  font-size: 40px;
}

.paragraph-3 {
  padding-top: 0px;
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  text-align: left;
}

.container-2 {
  margin-top: 40px;
}

.heading-3 {
  margin-top: 40px;
  font-family: Philosopher, sans-serif;
}

.container-3 {
  margin-top: 40px;
}

.image-4 {
  position: static;
  display: block;
  overflow: visible;
  text-align: center;
}

.column {
  margin-top: 30px;
  text-align: center;
}

.column-2 {
  padding-top: 30px;
  padding-bottom: 0px;
  text-align: center;
}

.image-5 {
  min-height: 0px;
  min-width: 0px;
  padding-top: 40px;
  text-align: center;
}

.container-4 {
  padding-bottom: 40px;
  text-align: center;
}

.image-6 {
  min-height: 0px;
  min-width: 0px;
  padding-top: 40px;
  padding-bottom: 40px;
}

.container-5 {
  padding-top: 8px;
}
/* ... */

